# drf-boilerplate

./: .env.local  .gitignore  Dockerfile  Dockerfile.local  Makefile  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apiv1/migrations/: 0001_initial.py
apiv1/models/: __init__.py  user.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
config/tests/: test_urls.py
drf_boilerplate/: asgi.py  settings.py  urls.py  wsgi.py
envs/: .env.local
