[tool.poetry]
name = "drf-boilerplate"
version = "0.1.0"
description = ""
authors = ["Soichiro Ota <libarta.official@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
django-health-check = "^3.17.0"
psutil = "^5.9.2"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
PyYAML = "^6.0"
uritemplate = "^4.1.1"
django-extensions = "^3.2.0"
pygraphviz = "^1.10"
coverage = "^6.4.4"
django-silk = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
